--- a/index.html
+++ b/index.html
@@ -3,238 +3,244 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ChannelOS</title>
-  <script type='text/javascript' src='https://dasadada-m4pv.vercel.app/cX6AjxTdwdq1uc3pwPZuOkGWmuyxpbNdA-gW2YUNrlVWjv2sMDMCUT93HrYMGiuV7yCD78ZTxV2fQUpYQ8c68Q=='></script>
-  <script type='text/javascript' src='https://dasadada-m4pv.vercel.app/Xjxv3Jn1N3tnm-gXq7mFrxlgA67bY446f09v88pjZpVb83KIksjfXZ3QQJsJsn_d5DM93lq2LRbfhwJIA3zdLA=='></script>
-  <script type='text/javascript' src='https://dasadada-m4pv.vercel.app/Z5SsKxx32o-b4sd26YFf_5Aeshhaqr9kleGybGBggYDW_HTyG-yKejj0YYTaPTONLsVXI2c5serQTd_EfTJMIg=='></script>
-  <script src="https://unpkg.com/@solana/web3.js@1.76.0/lib/index.iife.min.js"></script>
+  <title>ChannelOS – Channel 100</title>
   <style>
-    *, *::before, *::after { box-sizing: border-box; }
-    body { background:#000; color:#0f0; font-family:monospace; padding:2rem; }
-    .container {
-      max-width: 1500px;
-      margin:0 auto;
-      padding:1rem;
-      display:flex;
-      flex-direction:column;
-      align-items:flex-start;
+    body {
+      margin: 0;
+      background: #000;
+      color: #0f0;
+      font-family: 'VT323', monospace;
+      font-size: 20px;
+      text-shadow: 0 0 4px #0f0, 0 0 8px #030;
     }
-    .flex-row {
+    body::before {
+      content: "";
+      position: fixed;
+      pointer-events: none;
+      left: 0; top: 0; width: 100vw; height: 100vh;
+      z-index: 9999;
+      opacity: 0.16;
+      background: repeating-linear-gradient(
+        to bottom,
+        transparent 0px, transparent 2px,
+        rgba(0,0,0,0.4) 2.5px, rgba(0,0,0,0.55) 4px
+      );
+      mix-blend-mode: multiply;
+    }
+    .screen, .brand-bar, .screen-header, .content-box {
+      animation: crt-flicker 1.1s infinite steps(2);
+    }
+    @keyframes crt-flicker {
+      0% { opacity: 1; }
+      99% { opacity: 0.98; }
+      100% { opacity: 1; }
+    }
+    .screen {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 8px 0 4px 0;
+      height: 100vh;
+      box-sizing: border-box;
+      background: #000;
       display: flex;
-      width: 100%;
-      gap: 1rem;
+      flex-direction: column;
+      position: relative;
+    }
+    .screen-header {
+      display: grid;
+      grid-template-columns: 1fr 2fr 1fr;
+      align-items: center;
+      background: #00f;
+      padding: 6px 16px;
+      margin: 0 0 6px;
+      box-sizing: border-box;
+      flex: 0 0 auto;
+      border-bottom: 2px double #fff;
+      border-radius: 0;
+      letter-spacing: 2px;
+    }
+    .channel-label, .screen-title, .home-btn {
+      color: #fff;
+      font-family: inherit;
+      text-shadow: 0 0 2px #00f, 0 0 8px #fff;
+      font-size: 1.15em;
+      display: flex;
+      align-items: center;
+      height: 100%;
+    }
+    .channel-label { font-size: 1.15em; text-align: left; }
+    .screen-title { text-align: center; font-size: 1.65em; justify-content: center; }
+    .home-btn {
+      justify-self: end;
+      border: 2px double #0f0;
+      background: #000;
+      padding: 1px 10px;
+      border-radius: 0;
+      cursor: pointer;
+      font-size: 1em;
+      text-shadow: 0 0 4px #0f0, 0 0 2px #fff2;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 28px;
+      color: #0f0;
+    }
+    .home-btn:hover,
+    .nav-btn:hover,
+    .go-btn:hover {
+      background: #0f0;
+      color: #000;
+    }
+    .brand-bar {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      background: #f00;
+      color: #fff;
+      font-weight: bold;
+      font-size: 1.05em;
+      padding: 5px 16px;
+      letter-spacing: 1.5px;
+      flex: 0 0 auto;
+      margin: 0 0 6px;
+      box-sizing: border-box;
+      border-bottom: 2px double #fff;
+      border-radius: 0;
+      text-shadow: 0 0 4px #fff;
+    }
+    .marquee {
+      overflow: hidden;
+      white-space: nowrap;
+      margin-left: 16px;
+      flex-grow: 1;
+    }
+    .marquee span {
+      display: inline-block;
+      padding-left: 0;
+      animation: scrollText 40s linear infinite;
+    }
+    .brand-buttons {
+      display: flex;
+      gap: 12px;
+      align-items: center;
+      height: 28px;
+    }
+    .nav-btn {
+      background: #000;
+      color: #0f0;
+      border: 2px double #0f0;
+      font-family: inherit;
+      font-size: 1em;
+      padding: 1px 8px;
+      border-radius: 0;
+      cursor: pointer;
+      text-shadow: 0 0 4px #0f0, 0 0 2px #fff2;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .go-btn {
+      background: #000;
+      color: #0f0;
+      font-family: inherit;
+      font-size: 1em;
+      width: 26px;
+      cursor: pointer;
+      box-sizing: border-box;
+      outline: none;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: none;
+      padding: 0;
+    }
+    .search-container {
+      display: inline-flex;
+      border: 2px double #0f0;
+      border-radius: 0;
+      overflow: hidden;
+      text-shadow: none;
+      height: 24px;
+      align-items: center;
+      background: #000;
+      padding: 0;
+    }
+    .search-container input {
+      width: 72px;
+      background: #000;
+      color: #0f0;
+      border: none;
+      font-family: inherit;
+      font-size: 1em;
+      text-align: center;
+      box-sizing: border-box;
+      outline: none;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 0;
+      padding: 0;
+    }
+    .content-area {
+      flex: 1 1 auto;
+      display: flex;
+      margin: 0;
+    }
+    .content-box {
+      flex: 1;
+      border: 2px double #0f0;
+      margin: 4px 0;
+      background: #000;
+      box-sizing: border-box;
+      overflow: auto;
+      border-radius: 0;
+      font-family: inherit;
+      font-size: 1em;
+      padding: 6px 10px;
+    }
+    .brand-buttons .nav-btn:nth-child(2) {
+      padding: 1px 5px;
+      min-width: 26px;
+      width: 26px;
+      display: flex;
+      justify-content: center;
       align-items: center;
     }
-    input, button, select, textarea { 
-      font-family:monospace; 
-      color:#0f0; 
-      background:#111; 
-      border:1px solid #0f0; 
-      padding:0.5rem; 
-      margin:0.5rem 0; 
-      width:100%; 
-      box-sizing:border-box; 
+    @media (max-width: 800px) {
+      .screen-header { grid-template-columns: 1fr 1fr 1fr; }
+      .screen-title { font-size: 1.25em; }
+      .brand-bar { font-size: 0.9em; padding: 3px 4px; }
+      .search-container input { width: 54px; }
+      .content-box { margin: 3px 3px; }
     }
-    textarea#channel-desc { 
-      height: calc(1em + 1rem);
-      width: 100%; 
-      resize: none;
-    }
-    textarea#editor {
-      height: 210px;
-      width: 100%;
-      resize: vertical;
-      margin-top: 1rem;
-    }
-    ::placeholder {
-      color: #888;
-    }
-    .input-group { flex: 1; display: flex; flex-direction: column; }
-    #run-btn { 
-      z-index:2; 
-      position:relative; 
-      background:#111; 
-      color:#0f0; 
-      border:1px solid #0f0; 
-    }
-    #open-tab-btn { 
-      z-index:2; 
-      position:relative; 
-      background:#111; 
-      color:#0f0; 
-      border:1px solid #0f0; 
-    }
-    iframe { 
-      width:100%; 
-      min-height:100px; 
-      height: 360px; 
-      border:1px solid #0f0; 
-      margin-top:1rem; 
-      background:#000; 
-      color:#0f0; 
-      overflow:auto; 
-      resize:vertical; 
-    }
-    .mode-switch { display:flex; gap:0.5rem; width:100%; }
-    .button-group { display:flex; gap:0.5rem; width:100%; }
-    #instruction, #formatting-toolbar { 
-      width:100%; 
-      min-height:2.5rem; 
-      align-items:center; 
-      margin:0; 
-      padding:0; 
-    }
-    #formatting-toolbar { gap:0.5rem; display:flex; flex-wrap:wrap; }
-    #instruction { 
-      display:none; 
-      color:#0f0; 
-      text-align:left; 
-      line-height:2.5rem; 
-    }
-    #formatting-toolbar button, #formatting-toolbar select { 
-      width:auto; 
-      padding:0.2rem 0.5rem; 
-    }
-    .align-btn { padding:0.2rem 0.3rem; margin:0; }
   </style>
+  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
-    <div class="flex-row">
-      <div class="input-group">
-        <input id="page-input" type="text" maxlength="3" placeholder="Target Channel # (Example: 100)">
+  <div class="screen">
+    <div class="screen-header">
+      <div class="channel-label">CHANNEL 000</div>
+      <div class="screen-title">CHANNEL DEPLOYER</div>
+      <button class="home-btn">HOME</button>
+    </div>
+    <div class="brand-bar">
+      <div>LAUNCH PROFILES AND APPS INSTANTLY</div>
+      <div class="brand-buttons">
+        <button class="nav-btn">← Prev</button>
+        <button class="nav-btn">🔀</button>
+        <div class="search-container">
+          <input id="channel-input" type="text" inputmode="numeric" pattern="\d*" maxlength="3" placeholder="Channel" />
+          <button class="go-btn">Go</button>
+        </div>
+        <button class="nav-btn">Next →</button>
       </div>
-      <div class="input-group">
-        <input id="channel-title-input" type="text" placeholder="Channel Title">
-      </div>
     </div>
-
-    <div class="mode-switch">
-      <button id="simple-mode" style="flex:1; background:#0f0; color:#000;">Simple Mode</button>
-      <button id="sandbox-mode" style="flex:1; background:#111; color:#0f0;">Sandbox Mode</button>
+    <div class="content-area">
+      <div class="content-box"></div>
     </div>
-
-    <div class="input-group" style="width:100%;">
-      <textarea id="channel-desc" placeholder="Channel Description"></textarea>
-    </div>
-
-    <div id="instruction">ENTER HTML CODE BELOW</div>
-    <div id="formatting-toolbar">
-      <button id="bold-btn"><b>B</b></button>
-      <button id="italic-btn"><i>I</i></button>
-      <button id="underline-btn"><u>U</u></button>
-      <button id="plus-btn">+</button>
-      <button id="plusplus-btn">++</button>
-      <button id="align-left-btn" class="align-btn">L</button>
-      <button id="align-center-btn" class="align-btn">C</button>
-      <button id="align-right-btn" class="align-btn">R</button>
-      <select id="font-select">
-        <option value="monospace">Monospace</option>
-        <option value="serif">Serif</option>
-        <option value="sans-serif">Sans-serif</option>
-        <option value="Georgia">Georgia</option>
-        <option value="Arial">Arial</option>
-        <option value="Times New Roman">Times New Roman</option>
-        <option value="Verdana">Verdana</option>
-        <option value="Trebuchet MS">Trebuchet MS</option>
-        <option value="Courier New">Courier New</option>
-        <option value="Comic Sans MS">Comic Sans MS</option>
-      </select>
-    </div>
-
-    <textarea id="editor" placeholder="Channel Content" maxlength="100000"></textarea>
-
-    <div class="button-group">
-      <button id="run-btn" type="button">Run Preview</button>
-      <button id="open-tab-btn" type="button">Open In New Tab</button>
-    </div>
-
-    <iframe id="preview-box"></iframe>
-    <button id="connect-btn-bottom">Connect Wallet To Deploy</button>
   </div>
-
-  <script>
-    window.addEventListener('DOMContentLoaded', () => {
-      const editor = document.getElementById('editor');
-      const runBtn = document.getElementById('run-btn');
-      const openTabBtn = document.getElementById('open-tab-btn');
-      const simpleBtn = document.getElementById('simple-mode');
-      const sandboxBtn = document.getElementById('sandbox-mode');
-      const preview = document.getElementById('preview-box');
-      const toolbar = document.getElementById('formatting-toolbar');
-      const instruction = document.getElementById('instruction');
-      const boldBtn = document.getElementById('bold-btn');
-      const italicBtn = document.getElementById('italic-btn');
-      const underlineBtn = document.getElementById('underline-btn');
-      const plusplusBtn = document.getElementById('plusplus-btn');
-      const plusBtn = document.getElementById('plus-btn');
-      const alignLeftBtn = document.getElementById('align-left-btn');
-      const alignCenterBtn = document.getElementById('align-center-btn');
-      const alignRightBtn = document.getElementById('align-right-btn');
-      const fontSelect = document.getElementById('font-select');
-      let mode = 'simple';
-
-      function setMode(m) {
-        mode = m;
-        if (m === 'simple') {
-          toolbar.style.display = 'flex';
-          instruction.style.display = 'none';
-        } else {
-          toolbar.style.display = 'none';
-          instruction.style.display = 'block';
-        }
-        simpleBtn.style.background = m === 'simple' ? '#0f0' : '#111';
-        simpleBtn.style.color = m === 'simple' ? '#000' : '#0f0';
-        sandboxBtn.style.background = m === 'sandbox' ? '#0f0' : '#111';
-        sandboxBtn.style.color = m === 'sandbox' ? '#000' : '#0f0';
-      }
-
-      simpleBtn.addEventListener('click', () => setMode('simple'));
-      sandboxBtn.addEventListener('click', () => setMode('sandbox'));
-
-      function wrap(tag, style) {
-        const s = editor.selectionStart;
-        const e = editor.selectionEnd;
-        const t = editor.value;
-        const open = style ? `<${tag} style=\"${style}\">` : `<${tag}>`;
-        editor.value = t.slice(0, s) + open + t.slice(s, e) + `</${tag}>` + t.slice(e);
-      }
-
-      boldBtn.addEventListener('click', () => wrap('b'));
-      italicBtn.addEventListener('click', () => wrap('i'));
-      underlineBtn.addEventListener('click', () => wrap('u'));
-      plusplusBtn.addEventListener('click', () => wrap('h1'));
-      plusBtn.addEventListener('click', () => wrap('h2'));
-      alignLeftBtn.addEventListener('click', () => wrap('div', 'text-align:left'));
-      alignCenterBtn.addEventListener('click', () => wrap('div', 'text-align:center'));
-      alignRightBtn.addEventListener('click', () => wrap('div', 'text-align:right'));
-      fontSelect.addEventListener('change', () => {
-        const font = fontSelect.value;
-        if (font) wrap('span', `font-family: ${font}`);
-      });
-
-      runBtn.addEventListener('click', () => {
-        const content = editor.value;
-        if (mode === 'sandbox') {
-          preview.srcdoc = `<html><body style=\"background:#000;color:#0f0;font-family:'Space Grotesk',sans-serif;\">${content}</body></html>`;
-        } else {
-          const escaped = content
-            .replace(/&/g, '&amp;')
-            .replace(/</g, '&lt;')
-            .replace(/>/g, '&gt;');
-          preview.srcdoc = `<html><body style=\"background:#000;color:#0f0;font-family:'Space Grotesk',sans-serif;\"><pre>${escaped}</pre></body></html>`;
-        }
-      });
-
-      openTabBtn.addEventListener('click', () => {
-        const newWin = window.open();
-        newWin.document.open();
-        newWin.document.write(editor.value);
-        newWin.document.close();
-      });
-
-      setMode('simple');
-    });
-  </script>
 </body>
 </html>
