--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       <button class="home-btn">HOME</button>
     </div>
     <div class="brand-bar">
-      <div>LAUNCH PROFILES AND APPS INSTANTLY</div>
+      <div>LAUNCH PROFILES OR APPS INSTANTLY</div>
       <div class="brand-buttons">
         <button class="nav-btn">← Prev</button>
         <button class="nav-btn">🔀</button>
